# timeRecord

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css  main.tsx  navigation.ts  routes.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_state.rs  config.rs  lib.rs  main.rs  tray.rs
apps/desktop/src-tauri/src/commands/: mod.rs  settings.rs  stats.rs  summary.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs  repository.rs
apps/desktop/src-tauri/src/history/: mod.rs
apps/desktop/src-tauri/src/stats/: queries.rs
apps/desktop/src-tauri/src/summary/: context.rs  deepseek.rs  local.rs  mod.rs
apps/desktop/src-tauri/src/tracking/: foreground.rs  idle.rs  media.rs  mod.rs  recorder.rs  session.rs
apps/desktop/src-tauri/tests/: db_repository.rs  history_analytics.rs  session_recorder.rs  settings_command.rs  summary_provider.rs  tray_menu.rs
apps/desktop/src/__tests__/: app-shell.test.tsx  history-page.test.tsx  settings-page.test.tsx  summary-refresh.test.ts  usage-donut.test.ts  usage-trend.test.ts
apps/desktop/src/components/cards/: SummaryCard.tsx
apps/desktop/src/lib/: tauri.ts
apps/desktop/src/pages/: AppsPage.tsx  DashboardPage.tsx  HistoryPage.tsx  PlaceholderPage.tsx  SettingsPage.tsx  WindowsPage.tsx
apps/desktop/src/store/: useSettingsStore.ts  useStatsStore.ts
apps/desktop/src/types/: stats.ts
(+5 files in other folders)
